# recall-board

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.github/workflows/: ci.yml
src/: application.py  autostart.py  clipboard_manager.py  history_store.py  keybinding.py  main.py  window.py
tests/: conftest.py  test_application.py  test_autostart.py  test_clipboard_manager.py  test_history_store.py  test_install.bats  test_keybinding.py  test_window.py
